# ChowChow

./: .env.example  .gitignore  README.md  TESTING.md  index.html  package.json  reset_memory.sh
.cargo/: config.toml
demo_data/: chow_route_update_email.txt  chow_shipments_erp.csv  macau_expansion_memo.txt  test.txt  vegas_intel_report.txt  wolfpack_email_chain.txt
src/: App.css  App.tsx  main.tsx
src-tauri/: .anon_id  Cargo.toml  cognee.db  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.cognee_system/: graph  graph.wal
src-tauri/.cognee_system/databases/cognee.lancedb/__manifest/_transactions/: 0-64b0a17a-0dcc-4341-93bf-21e6f8b59fb5.txn
src-tauri/.data_storage/22/7d/: text_2db74da6f3ef078aac9838c5b4d861e0.txt
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: alert_service.rs  blast_radius_service.rs  correction_service.rs  ingestion_service.rs  lib.rs  query_service.rs
src-tauri/crates/domain/tests/: services.rs
src-tauri/crates/memory_cognee/: Cargo.toml  ontology.ttl
src-tauri/crates/memory_cognee/examples/: correction_smoke.rs  dump_edges.rs  inspect_types.rs  seed_demo.rs  sentinel_smoke.rs  smoke.rs
src-tauri/crates/memory_cognee/src/: config.rs  lib.rs  live_graph.rs  muted_graph.rs  schema_repair.rs  trace.rs
src-tauri/crates/memory_engine/: Cargo.toml
src-tauri/crates/memory_engine/src/: lib.rs
src-tauri/crates/memory_sqlite/: Cargo.toml
src-tauri/crates/memory_sqlite/migrations/: 001_init.sql
src-tauri/crates/memory_sqlite/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: alerts.rs  blast_radius.rs  corrections.rs  forget.rs  gemini_proxy.rs  google_sync.rs  graph.rs  ingestion.rs  mod.rs  query.rs  settings.rs
src/components/: CognitionTrace.tsx  ComingSoon.tsx  ConfidenceBadge.tsx  EmptyState.tsx  EntityChip.tsx  MonoText.tsx  SeverityDot.tsx  StatusPill.tsx
src/data/: demoData.ts
src/hooks/: useKeyboardShortcut.ts  useNavigation.ts
src/layout/: AppShell.tsx  NavRail.tsx  NavRailItem.tsx  TopologyStrip.tsx
src/lib/: entityTypes.ts  tauri.ts
src/pages/BlastRadius/: BlastRadius.tsx
src/pages/CommandCenter/: ActiveAlerts.tsx  AlertRow.tsx  CommandCenter.tsx  RecentActivity.tsx  RiskPosture.tsx
src/pages/CorrectionsLog/: CorrectionsLog.tsx
src/pages/GraphExplorer/: GraphCanvas.tsx  GraphEdge.tsx  GraphExplorer.tsx  GraphFilters.tsx  GraphNode.tsx  GraphSearch.tsx  InspectorPanel.tsx  NodeModal.tsx  graphAnalytics.test.ts  graphAnalytics.ts  useForceSimulation.ts  useLiveGraph.ts
src/pages/Ingestion/: DropZone.tsx  FileRow.tsx  Ingestion.tsx  IngestionSummary.tsx  SourceItem.tsx  SourceList.tsx
src/pages/QueryAsk/: AiAnswer.tsx  MessageList.tsx  QueryAsk.tsx  QueryHistory.tsx  QueryInput.tsx  ReasoningPath.tsx  SuggestedChips.tsx  UserMessage.tsx
src/pages/Settings/: LlmProviderSection.tsx  ResetSection.tsx  Settings.tsx  StorageSection.tsx
src/styles/: animations.css  components.css  layout.css  reset.css  tokens.css  typography.css
src/types/: index.ts
