[workspace]
members = [
    ".",
    "crates/memory_engine",
    "crates/memory_sqlite",
    "crates/memory_cognee",
    "crates/domain",
]
resolver = "2"

[package]
name = "hackathon-app"
version = "0.1.0"
description = "Sovereign Supply Chain Risk Engine"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hackathon_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
dotenvy = "0.15"

# Internal workspace crates
memory_engine = { path = "crates/memory_engine" }
memory_sqlite = { path = "crates/memory_sqlite" }
domain = { path = "crates/domain" }

# Feature-gated: cognee-rs production engine (default-on; falls back to the
# SQLite stub at runtime if Ollama/cognee init fails)
memory_cognee = { path = "crates/memory_cognee", optional = true }

[features]
default = ["cognee"]
cognee = ["dep:memory_cognee"]
