[package]
name = "domain"
version = "0.1.0"
edition = "2021"
description = "Business logic services — storage-agnostic, testable without Tauri"

[dependencies]
memory_engine = { path = "../memory_engine" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
