[package]
name = "memory_cognee"
version = "0.1.0"
edition = "2021"
description = "cognee-rs backed implementation of MemoryEngine"

[dependencies]
memory_engine = { path = "../memory_engine" }
cognee-lib = "0.1"
cognee-session = { version = "0.1", features = ["fs"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
