[package]
name = "memory_sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed stub implementation of MemoryEngine"

[dependencies]
memory_engine = { path = "../memory_engine" }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs"] }
